{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 153,
  "lineage": "da5dcaed-cdd9-1d5c-c80c-34c2661d3b5a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679720146112:internet-gateway/igw-092a65b1db4f41113",
            "id": "igw-092a65b1db4f41113",
            "owner_id": "679720146112",
            "tags": {
              "Name": "primary-igw"
            },
            "tags_all": {
              "Name": "primary-igw"
            },
            "vpc_id": "vpc-07c3d3399979a07b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:679720146112:internet-gateway/igw-07ab345c58f7bdb6b",
            "id": "igw-07ab345c58f7bdb6b",
            "owner_id": "679720146112",
            "tags": {
              "Name": "secondary-igw"
            },
            "tags_all": {
              "Name": "secondary-igw"
            },
            "vpc_id": "vpc-010017e35da3ca4ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679720146112:route-table/rtb-0253163429ad6c10f",
            "id": "rtb-0253163429ad6c10f",
            "owner_id": "679720146112",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092a65b1db4f41113",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "primary-rt"
            },
            "tags_all": {
              "Name": "primary-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c3d3399979a07b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.primary",
            "module.vpc.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:679720146112:route-table/rtb-01a4c91b614ac045d",
            "id": "rtb-01a4c91b614ac045d",
            "owner_id": "679720146112",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ab345c58f7bdb6b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "secondary-rt"
            },
            "tags_all": {
              "Name": "secondary-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-010017e35da3ca4ab"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.secondary",
            "module.vpc.aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08320b2e2714d8df5",
            "route_table_id": "rtb-0253163429ad6c10f",
            "subnet_id": "subnet-011f1b873d56fc003"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.primary",
            "module.vpc.aws_route_table.primary",
            "module.vpc.aws_subnet.primary_a",
            "module.vpc.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e75eb3edda560b63",
            "route_table_id": "rtb-0253163429ad6c10f",
            "subnet_id": "subnet-0e88dc3ff4431e6be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.primary",
            "module.vpc.aws_route_table.primary",
            "module.vpc.aws_subnet.primary_b",
            "module.vpc.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "secondary_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086a4d87c0468e3c0",
            "route_table_id": "rtb-01a4c91b614ac045d",
            "subnet_id": "subnet-04367a505214ae8e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.secondary",
            "module.vpc.aws_route_table.secondary",
            "module.vpc.aws_subnet.secondary_a",
            "module.vpc.aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "secondary_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1dd0c89b7fefbb5",
            "route_table_id": "rtb-01a4c91b614ac045d",
            "subnet_id": "subnet-036cb8b2588c890b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.secondary",
            "module.vpc.aws_route_table.secondary",
            "module.vpc.aws_subnet.secondary_b",
            "module.vpc.aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679720146112:subnet/subnet-011f1b873d56fc003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011f1b873d56fc003",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679720146112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primary-subnet-a"
            },
            "tags_all": {
              "Name": "primary-subnet-a"
            },
            "vpc_id": "vpc-07c3d3399979a07b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679720146112:subnet/subnet-0e88dc3ff4431e6be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e88dc3ff4431e6be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679720146112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primary-subnet-b"
            },
            "tags_all": {
              "Name": "primary-subnet-b"
            },
            "vpc_id": "vpc-07c3d3399979a07b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:679720146112:subnet/subnet-04367a505214ae8e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04367a505214ae8e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679720146112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secondary-subnet-a"
            },
            "tags_all": {
              "Name": "secondary-subnet-a"
            },
            "vpc_id": "vpc-010017e35da3ca4ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:679720146112:subnet/subnet-036cb8b2588c890b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036cb8b2588c890b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679720146112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secondary-subnet-b"
            },
            "tags_all": {
              "Name": "secondary-subnet-b"
            },
            "vpc_id": "vpc-010017e35da3ca4ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679720146112:vpc/vpc-07c3d3399979a07b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d3ecc1dbd130e51",
            "default_route_table_id": "rtb-0b18b4a40e4463f23",
            "default_security_group_id": "sg-0ed67e22b64d790c5",
            "dhcp_options_id": "dopt-0d797378c29c00f17",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c3d3399979a07b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b18b4a40e4463f23",
            "owner_id": "679720146112",
            "tags": {
              "Name": "primary-vpc"
            },
            "tags_all": {
              "Name": "primary-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:679720146112:vpc/vpc-010017e35da3ca4ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0213a39efb8b7544d",
            "default_route_table_id": "rtb-05778bf66d533ef00",
            "default_security_group_id": "sg-056c1ce7793f011f3",
            "dhcp_options_id": "dopt-00fabead253448621",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010017e35da3ca4ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05778bf66d533ef00",
            "owner_id": "679720146112",
            "tags": {
              "Name": "secondary-vpc"
            },
            "tags_all": {
              "Name": "secondary-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}